--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  rflutter_alert: ^1.1.0
 
 
 # For information on the generic Dart part of this file, see the
